# Humanoid_manipulation

./: README.md
arm_ctrl/: CMakeLists.txt  package.xml
arm_ctrl/config/: arm_params.yaml  controller.yaml
arm_ctrl/include/: ik_module.hpp  main_node.hpp  trajectory_planner.hpp
arm_ctrl/launch/: arm_ctrl.launch.py  rviz.launch.py  sim.launch.py
arm_ctrl/msg/: ArmCtrlFlag.msg  ArmJointAngle.msg
arm_ctrl/src/: ik_module.cpp  main_node.cpp  trajectory_planner.cpp
